force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/leaseworks__Reconciliation_Schedule__c.object-meta.xml
<CustomObject>
    <label>Reconciliation Schedule</label>
    <nameField>
        <label>Reconciliation Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reconciliation Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>