force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/fields/leaseworks__Asset__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Asset Associated with the Reconciliation Schedule.</inlineHelpText>
    <label>_Asset</label>
    <referenceTo>leaseworks__Aircraft__c</referenceTo>
    <relationshipLabel>Reconciliation Schedules</relationshipLabel>
    <relationshipName>Reconciliation_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>