force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/fields/leaseworks__Contractual_Ratio__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Contractual_Ratio__c</fullName>
    <label>Contractual Ratio</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>