force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/fields/leaseworks__Eligible__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Eligible__c</fullName>
    <formula>leaseworks__Latest_Actual_Utilization__r.leaseworks__Month_Ending__c &gt;= leaseworks__To_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Eligible For Reconciliation</label>
    <type>Checkbox</type>
</CustomField>