force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/fields/leaseworks__Excess_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Excess_Amount__c</fullName>
    <label>Z_Unused_2203 Excess Amount</label>
    <summarizedField>leaseworks__Reconciliation_Line_Item__c.leaseworks__Excess_Amount__c</summarizedField>
    <summaryForeignKey>leaseworks__Reconciliation_Line_Item__c.leaseworks__Reconciliation_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>