force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/fields/leaseworks__Excess_Amount_new__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Excess_Amount_new__c</fullName>
    <description>Calculated Excess Amount after Reconciling with Type- Excess Utilization.</description>
    <inlineHelpText>Calculated Excess Amount after Reconciling with Type- Excess Utilization.</inlineHelpText>
    <label>Excess Amount</label>
    <summarizedField>leaseworks__Reconciliation_Line_Item__c.leaseworks__Excess_Amount_new_F__c</summarizedField>
    <summaryForeignKey>leaseworks__Reconciliation_Line_Item__c.leaseworks__Reconciliation_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>