force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/fields/leaseworks__From_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__From_Date__c</fullName>
    <description>Start Date of the reconciliation period.</description>
    <inlineHelpText>Start Date of the reconciliation period.</inlineHelpText>
    <label>From Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>