force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/fields/leaseworks__Latest_Actual_Utilization_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Latest_Actual_Utilization_F__c</fullName>
    <formula>HYPERLINK(&#39;/&#39; &amp;  leaseworks__Latest_Actual_Utilization__c ,  leaseworks__Latest_Actual_Utilization__r.Name ,&#39;__blank&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Actual Utilization</label>
    <type>Text</type>
</CustomField>