force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/fields/leaseworks__Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lease__c</fullName>
    <description>Lease Associated with the Reconciliation Schedule.</description>
    <inlineHelpText>Lease Associated with the Reconciliation Schedule.</inlineHelpText>
    <label>Lease</label>
    <referenceTo>leaseworks__Lease__c</referenceTo>
    <relationshipLabel>Reconciliation Schedules</relationshipLabel>
    <relationshipName>Reconciliation_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>