force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/fields/leaseworks__Months__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Months__c</fullName>
    <description>Period in months calculated by the system based on the dates in this schedule.</description>
    <formula>(
( (YEAR(leaseworks__To_Date__c) - YEAR(leaseworks__From_Date__c) - 1) *12 )
+ (12 - MONTH(leaseworks__From_Date__c) +1)
+ MONTH(leaseworks__To_Date__c)
- 1
+ IF(DAY(leaseworks__To_Date__c) &gt; DAY(leaseworks__From_Date__c),1,0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Period in months calculated by the system based on the dates in this schedule</inlineHelpText>
    <label>Reconciliation Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>