force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/fields/leaseworks__Not_Maintenance_Reserve__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Not_Maintenance_Reserve__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check here to create an Invoice that does not accrue to the MR Fund. This field cannot be updated for a Reconciliation Schedule in Completed/Reconciled status. Please decline or cancel the related Invoice/Credit Memo to change the status of Reconciliation to ‘Open’.</description>
    <inlineHelpText>Check here to create an Invoice that does not accrue to the MR Fund. This field cannot be updated for a Reconciliation Schedule in Completed/Reconciled status. Please decline or cancel the related Invoice/Credit Memo to change the status of Reconciliation to ‘Open’</inlineHelpText>
    <label>Not Maintenance Reserve</label>
    <type>Checkbox</type>
</CustomField>