force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/fields/leaseworks__Reconciliation_Period_in_months__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reconciliation_Period_in_months__c</fullName>
    <formula>Text( leaseworks__Reconciliation_Period__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Frequency of reconciliation (user entered while generating the schedule)</inlineHelpText>
    <label>Reconciliation Frequency (in months)</label>
    <type>Text</type>
</CustomField>