force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/fields/leaseworks__Reconciliation_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Reconciliation_Type__c</fullName>
    <label>_Reconciliation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assumed FH and FC</fullName>
            </value>
            <value>
                <fullName>Assumed Ratio</fullName>
            </value>
            <value>
                <fullName>Excess Utilization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>