force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/fields/leaseworks__Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Schedule_Type__c</fullName>
    <description>The Schedule Type field indicates whether the reconciliation schedule is of type &#39;Actual&#39; or &#39;TrueUp&#39;. Default Value is automatically set to &#39;Actual&#39; for new reconciliation schedules where a TrueUp has not occurred. When a TrueUp is initiated via the &#39;TrueUp&#39; button, this field value on the Trueup Reconciliation record will have the value as &#39;TrueUp&#39;</description>
    <inlineHelpText>The Schedule Type field indicates whether the reconciliation schedule is of type &#39;Actual&#39; or &#39;TrueUp&#39;. Default Value is automatically set to &#39;Actual&#39; for new reconciliation schedules where a TrueUp has not occurred. When a TrueUp is initiated via the &#39;TrueUp&#39; button, this field value on the Trueup Reconciliation record will have the value as &#39;TrueUp&#39;</inlineHelpText>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actual</fullName>
                <default>true</default>
                <label>Actual</label>
            </value>
            <value>
                <fullName>TrueUp</fullName>
                <label>Trueup</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>