force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/fields/leaseworks__Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Status__c</fullName>
    <description>Status of the Reconciliation Schedule:
1. Open- All newly generated schedules will be in Open Status by Default.
2. Completed- For a reconciliation performed but Invoice/ Credit memo pending, schedule will be in &#39;Completed&#39; status.
3. Reconciled: On approval of Invoice/ Credit memo, status of schedule changes to Reconciled.</description>
    <inlineHelpText>Status of the Reconciliation Schedule:
1. Open- All newly generated schedules will be in Open Status by Default.
2. Completed- For a reconciliation performed but Invoice/ Credit memo pending, schedule will be in &#39;Completed&#39; status.
3. Reconciled: On approval of Invoice/ Credit memo, status of schedule changes to Reconciled.</inlineHelpText>
    <label>_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Reconciled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>