force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/fields/leaseworks__To_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__To_Date__c</fullName>
    <description>End Date of the reconciliation period.</description>
    <inlineHelpText>End Date of the reconciliation period.</inlineHelpText>
    <label>To Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>