force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/fields/leaseworks__Total_Assumed_MR__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Total_Assumed_MR__c</fullName>
    <label>Total Assumed MR</label>
    <summarizedField>leaseworks__Reconciliation_Line_Item__c.leaseworks__Total_Assumed_MR__c</summarizedField>
    <summaryForeignKey>leaseworks__Reconciliation_Line_Item__c.leaseworks__Reconciliation_Schedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>