force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/recordTypes/leaseworks__Default.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Default</fullName>
    <active>true</active>
    <label>Default</label>
</RecordType>