force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/recordTypes/leaseworks__Excess_Utilization.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Excess_Utilization</fullName>
    <active>true</active>
    <label>Excess Utilization</label>
</RecordType>