force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/validationRules/leaseworks__Block_Disable_Invoice_Auto_Generation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Block_Disable_Invoice_Auto_Generation</fullName>
    <active>true</active>
    <description>This Validation is to Prevent Updating Disable Invoice Auto Generation if related Utilization is Approved</description>
    <errorConditionFormula>AND(
    !$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c,
    NOT( 
        ISNULL(
	        leaseworks__Latest_Actual_Utilization__c  
		)
	),
	ISPICKVAL(leaseworks__Latest_Actual_Utilization__r.leaseworks__Status__c,&quot;Approved By Lessor&quot;),
    ISCHANGED( leaseworks__Disable_Invoice_Auto_Generation__c ) 
)</errorConditionFormula>
    <errorMessage>You cannot update the &quot;Disable Auto Invoice Generation&quot; checkbox once the Utilizations for the reconciliation period have been approved.</errorMessage>
</ValidationRule>