force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/validationRules/leaseworks__Validate_Schedule_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Validate_Schedule_Type</fullName>
    <active>true</active>
    <description>The Schedule Type field is auto-populated based on the reconciliation schedule&apos;s creation process and cannot be manually updated.</description>
    <errorConditionFormula>AND($Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c == FALSE,ISCHANGED(leaseworks__Schedule_Type__c))</errorConditionFormula>
    <errorMessage>The Schedule Type field is auto-populated based on the reconciliation schedule&apos;s creation process and cannot be manually updated.</errorMessage>
</ValidationRule>