force-app/main/default/objects/leaseworks__Reconciliation_Schedule__c/validationRules/leaseworks__ValidateEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__ValidateEndDate</fullName>
    <active>true</active>
    <description>Validates &#39;To Date&#39; is not greater than &#39;Lease End Date&#39;.</description>
    <errorConditionFormula>leaseworks__To_Date__c  &gt;  leaseworks__Lease__r.leaseworks__Lease_End_Date_New__c</errorConditionFormula>
    <errorDisplayField>leaseworks__To_Date__c</errorDisplayField>
    <errorMessage>To Date cannot be greater than Lease End Date.</errorMessage>
</ValidationRule>